# Wither-Launcher

./: .gitignore  README.md  pnpm-lock.yaml  vite.config.ts  wither-steam-lifecycle.md
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  tray.rs
src-tauri/src/commands/: launcher.rs  library.rs  mod.rs  stats.rs  steam.rs  store.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/process/: launcher.rs  mod.rs  steam_launcher.rs  watcher.rs
src-tauri/src/steam/: acf_parser.rs  mod.rs  openid.rs  store_api.rs  web_api.rs
src-tauri/src/watcher/: file_watcher.rs
src/lib/api/: index.ts
src/lib/components/: EditGameModal.svelte  FilterDropdown.svelte  GameCard.svelte  NavItem.svelte  RecentCard.svelte  SearchBar.svelte  SectionHeader.svelte  Sidebar.svelte  StatusBar.svelte  StoreCard.svelte  StoreGameModal.svelte  SyncStatusDot.svelte  Topbar.svelte
src/lib/stores/: games.ts  index.ts  launchStore.ts  libraryStore.ts  storeStore.ts  syncStore.ts  ui.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/recent/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/store/: +page.svelte
